# village_des_benjamins

./: .eslintrc.js  .gitignore  Dockerfile  Pipfile  Procfile  README.md  backup_wednesday.html  captain-definition  docker-compose.yml  flake.nix  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  runserver.sh  treefmt.nix  tsconfig.json  vue.config.js
.github/workflows/: release.yaml
backend/: manage.py  requirements.txt
backend/frontend/: package-lock.json  package.json  tsconfig.json  vue.config.js  webpack-stats.json
backend/holiday/: admin.py  models.py  views.py
backend/members/: models.py
backend/section/: admin.py
backend/staticfiles/: app.cbee02851ac9.js  app.js.map  precache-manifest.400dfb0e7a58358ad130b9a07caaad9c.js  service-worker.6c854746a549.js  staticfiles.json
backend/templates/: application.html
backend/village_des_benjamins/: asgi.py  settings.py
frontend/: App.vue  main.js  package.json  router.js  utils.js  vue.config.js
frontend/common/: backendAPI.js
frontend/components/: HolidaySection.vue  MapContainer.vue  Outing.vue  ProgramCard.vue  Skew.vue  WhiteDot.vue
frontend/layout/: AppFooter.vue  AppHeader.vue  Contact.vue  Introduction.vue  ListLeft.vue  ListRight.vue  Team.vue  (+1 more)
holiday/: admin.py  apps.py  models.py  serializers.py  views.py
members/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
parent_messages/: admin.py  apps.py  models.py  serializers.py  views.py
public/: index.html
section/: admin.py  apps.py  models.py
site_content/: admin.py  apps.py  models.py  serializers.py  views.py
village_des_benjamins/: auth.py  providers.py  settings.py  urls.py  wsgi.py
(+124 files in other folders)
