[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "village-des-benjamins"
version = "1.0.0"
description = "Reservation management for the ASBL Village des benjamins"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
boto3 = "*"
dj-database-url = "*"
django = "*"
django-better-admin-arrayfield = "*"
django-colorfield = "*"
django-cors-headers = "*"
django-debug-toolbar = "*"
django-jazzmin = "*"
django-ordered-model = "*"
django-silk = "*"
django-tinymce = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
django-rest-passwordreset = "*"
django-storages = "*"
openpyxl = "*"
pillow = "*"
psycopg2-binary = "*"
sendgrid = "*"
sentry-sdk = "*"
whitenoise = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
