[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "village-des-benjamins"
version = "1.0.0"
description = "Reservation management for the ASBL Village des benjamins"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "beautifulsoup4",
  "boto3",
  "dj-database-url",
  "django",
  "django-better-admin-arrayfield",
  "django-colorfield",
  "django-cors-headers",
  "django-debug-toolbar",
  "django-jazzmin",
  "django-ordered-model",
  "django-silk",
  "django-tinymce",
  "djangorestframework",
  "djangorestframework-simplejwt",
  "django-rest-passwordreset",
  "django-storages",
  "openpyxl",
  "pillow",
  "psycopg2-binary",
  "sentry-sdk",
  "whitenoise"
]

[project.optional-dependencies]
dev = [
  "black"
]
